[B]Version 1.1.93[/B]
chaturbate enable online favourites menu